--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preinstall": "npm run install:server && npm run install:client",
+    "install:server": "cd server && npm install",
+    "install:client": "cd client && npm install",
+    "start": "npm run build && npm run start:server",
+    "build": "npm run build:client",
+    "build:client": "cd client && npm run build",
+    "start:server": "cd server && npm start"
   },
   "repository": {
     "type": "git",
