--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "preinstall": "npm run install:server && npm run install:client",
     "install:server": "cd server && npm ci",
     "install:client": "cd client && npm ci",
-    "start": "npm run build && npm run start:server",
+    "start": "npm run start:server",
     "build": "npm run build:client",
     "build:client": "cd client && npm run build",
     "start:server": "cd server && npm start"
