added omit dev in install script

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "preinstall": "npm run install:server && npm run install:client",
-    "install:server": "cd server && npm install",
-    "install:client": "cd client && npm install",
+    "install:server": "cd server && npm install --omit=dev",
+    "install:client": "cd client && npm install --omit=dev",
     "start": "npm run start:server",
     "build": "npm run build:client",
     "build:client": "cd client && npm run build",
