--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "vite": "^3.1.0",
+    "@vitejs/plugin-react": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "vite": "^3.1.0"
+    "@types/react-dom": "^18.0.6"
   }
 }
