--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "start": "npm run start:server",
     "build": "npm run build:client",
     "build:client": "cd client && npm run build",
-    "start:server": "cd server && npm start"
+    "start:server": "cd server && npm start",
+    "dev": "concurrently npm:dev:*",
+    "dev:client": "cd client && npm run dev",
+    "dev:server": "cd server && npm run dev"
   },
   "repository": {
     "type": "git",
@@ -24,6 +27,7 @@
   },
   "homepage": "https://github.com/jhoacar/txt2speech-todo-app#readme",
   "devDependencies": {
+    "concurrently": "^7.4.0",
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
